public/styles/style.css
:root {
    --border-color: #7b7b7bff;
    --text-light-color: #7b7b7bff;
    --text-lighter-color: #b1b1b1ff;
    --icon-project-color: #426fa5ff;
    --icon-folder-color: #a59042ff;
    --icon-file-color: #2e9b82ff;
    --icon-image-color: #c047c7ff;

    --theme-hue: 240;
    --theme-lightest: hsl(var(--theme-hue), 9%, 31%);
    --theme-light: hsl(var(--theme-hue), 9.38%, 25.1%);
    --theme-medium: hsl(var(--theme-hue), 11.11%, 22.94%);
    --theme-dark: hsl(calc(var(--theme-hue) - 20), 13.04%, 18.04%);
    --theme-darkest: hsl(var(--theme-hue), 6.38%, 9.22%);
    --theme-shadow: hsla(var(--theme-hue), 18%, 14%, 0.369);
    --theme-menu-item: hsl(var(--theme-hue), 8%, 29%);
    --theme-hover: hsl(calc(var(--theme-hue) + 12), 9%, 34%);
    --theme-disabled: hsl(calc(var(--theme-hue) + 12), 10%, 30%);

    --menu-bar-height: 26px;
    --tab-height: 42px;
    --side-bar-width: 260px;
    --footer-height: 14px;
    --editor-line-height: 11pt;
}
body, * {
    margin: 0px;
    padding: 0px;
}
#text-area {
    background-color: #0000;
    color: #0000;
    caret-color: #c0c0c0ff;
    border: none;
    resize: none;
}
#output-area {
    background-color: var(--theme-dark);
}
#text-area, #output-area {
    position: absolute;
    width: -webkit-fill-available;
    left: 57px;
    height: -webkit-fill-available;
    font-size: calc(var(--editor-line-height) - 2px);
    line-height: var(--editor-line-height);
    font-family: monospace;
    overflow: auto;
    outline: none;
    white-space: pre;
    overflow-wrap: normal;
    padding: 16px;
    scrollbar-width: 12px;
}
#line-number-div {
    position: absolute;
    width: 45px;
    height: -webkit-fill-available;
    padding: 16px 6px;
    background-color: var(--theme-darkest);
    text-align: end;
    overflow: hidden;
    font-size: calc(var(--editor-line-height) - 4px);
    line-height: var(--editor-line-height);
    word-spacing: 45px;
    color: #dfdfdfff;
    top: 0px;
}
#file-tabs {
    position: fixed;
}
#status-footer {
    position: fixed;
    width: 100%;
    height: var(--footer-height);
    left: 0px;
    top: calc(100% - var(--footer-height) - 1px);
    background-color: #3a3a46ff;
    border-top: 1px solid var(--border-color);
}


/* width */
::-webkit-scrollbar {
    width: 8px;
    background-color: var(--theme-darkest);
}

/* Track */
::-webkit-scrollbar-track {
    background: #f1f1f1; 
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #888; 
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555; 
}

